[package]
name = "algorithm-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear", tag = "v1.0.2" }
arena-io = { git = "https://github.com/ImpulseDAO/Vara-Arena", rev = "b8fed3b" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2" }
